--- a/index.html
+++ b/index.html
@@ -1,110 +1,170 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Vacation Rentals & Unique Homes</title>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-
-  <body>
-    <header>
-      <div class="logo">Thinkfulbnb</div>
-      <nav>
-        <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-      <!-- Stay -->
-      <section id="stay">
-        <h2>Find the perfect vacation rental</h2>
-        <!-- Create a form here -->
-      </section>
-
-      <!-- About -->
-      <section id="about" class="alternate-background">
-        <h2>About</h2>
-
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Vacation Rentals & Unique Homes</title>
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+            rel="stylesheet"
+            type="text/css"
         />
-
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Pangolin&family=Lato&display=swap"
+            rel="stylesheet"
         />
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
-      </section>
+    <body>
+        <header>
+            <div class="logo">Thinkfulbnb</div>
+            <nav>
+                <ul id="menu">
+                    <li><a>Stay</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Ideas</a></li>
+                    <li><a>Host</a></li>
+                </ul>
+            </nav>
+        </header>
 
-      <!-- Ideas -->
-      <section id="ideas">
-        <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        <main>
+            <!-- Stay -->
+            <section id="stay">
+                <h2>Find the perfect vacation rental</h2>
+                <form>
+                    <div class="group">
+                        <div class="item">
+                            <label for="location">Location</label>
+                            <input
+                                id="location"
+                                type="text"
+                                name="name"
+                                placeholder="Search destination"
+                                required
+                            />
+                        </div>
+                        <div class="item">
+                            <label for="arrive">Arrive</label>
+                            <input
+                                id="arrive"
+                                type="date"
+                                name="name"
+                                required
+                            />
+                        </div>
+                        <div class="item">
+                            <label for="depart">Depart</label>
+                            <input
+                                id="depart"
+                                type="date"
+                                name="name"
+                                required
+                            />
+                        </div>
+                        <div class="item">
+                            <label for="type">Type</label>
+                            <select name="type" id="type" size="1">
+                                <option value="apartment">Apartment</option>
+                                <option value="barn">Barn</option>
+                                <option value="castle">Castle</option>
+                                <option value="houseboat">Houseboat</option>
+                                <option value="tiny House">Tiny House</option>
+                                <option value="yacht">Yacht</option>
+                                <option value="yurt">Yurt</option>
+                            </select>
+                        </div>
+                        <button type="submit">Search</button>
+                    </div>
+                </form>
+            </section>
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            <!-- About -->
+            <section id="about" class="alternate-background">
+                <h2>About</h2>
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
-      </section>
+                <img
+                    src="images/vacation-rental-pool.png"
+                    alt="Thinkfulbnb - Vacation rental pool"
+                />
 
-      <!-- Host -->
-      <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
-        </p>
-        <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
-        </ul>
+                <img
+                    src="images/vacation-rental-inside-stone.png"
+                    alt="Thinkfulbnb - Vacation rental inside stone"
+                />
 
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
-      </section>
-    </main>
+                <p>
+                    Fusce porta odio nunc, eget pretium massa rutrum sit amet.
+                    Etiam fringilla aliquam dapibus. Maecenas quis nisi sed
+                    turpis aliquam porttitor eget ut quam. Sed vel scelerisque
+                    ex. Duis in pharetra neque, at tempus lorem. Aenean mi
+                    magna, posuere at quam sed, euismod gravida neque.
+                </p>
+            </section>
 
-    <footer>
-      <p>© Thinkful</p>
-    </footer>
-  </body>
+            <!-- Ideas -->
+            <section id="ideas">
+                <h2>Ideas</h2>
+                <h3>Forest retreats</h3>
+                <img
+                    src="images/forest-retreat.png"
+                    alt="Thinkfulbnb - Forest retreat"
+                />
+                <h3>Beaches</h3>
+                <img
+                    src="images/beach-house.png"
+                    alt="Thinkfulbnb - Beach house"
+                />
+
+                <h3>Rustic cabins</h3>
+                <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+
+                <h3>Pet-friendly</h3>
+                <img
+                    src="images/pet-friendly.png"
+                    alt="Thinkfulbnb - Pet-friendly"
+                />
+            </section>
+
+            <!-- Host -->
+            <section id="host" class="alternate-background">
+                <h2>Want to Become a Thinkfulbnb Host?</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Phasellus molestie in est id efficitur. Sed hendrerit ut
+                    turpis quis dapibus. Nam sit amet iaculis lectus. Aliquam
+                    erat volutpat. Praesent rhoncus pellentesque eros in
+                    aliquet. Sed accumsan elit lacus, id ultrices libero rutrum
+                    vitae.
+                </p>
+                <ul>
+                    <li>Mauris in pellentesque ligula.</li>
+                    <li>
+                        Sed accumsan elit lacus, id ultrices libero rutrum
+                        vitae.
+                    </li>
+                    <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+                    <li>
+                        Cras mollis lorem sagittis sapien imperdiet blandit.
+                        Vivamus.
+                    </li>
+                    <li>
+                        Donec vehicula ipsum nisi, eu consectetur leo feugiat
+                        et. Fusce eget hendrerit mauris.
+                    </li>
+                </ul>
+
+                <img
+                    src="images/become-a-host.png"
+                    alt="Thinkfulbnb - Become a host"
+                />
+            </section>
+        </main>
+
+        <footer>
+            <p>© Thinkful</p>
+        </footer>
+    </body>
 </html>
