--- a/index.html
+++ b/index.html
@@ -84,24 +84,31 @@
             <!-- About -->
             <section id="about" class="alternate-background">
                 <h2>About</h2>
+                <div class="group">
+                    <div class="item">
+                        <img
+                            src="images/vacation-rental-pool.png"
+                            alt="Thinkfulbnb - Vacation rental pool"
+                        />
+                    </div>
+                    <div class="item">
+                        <img
+                            src="images/vacation-rental-inside-stone.png"
+                            alt="Thinkfulbnb - Vacation rental inside stone"
+                        />
+                    </div>
 
-                <img
-                    src="images/vacation-rental-pool.png"
-                    alt="Thinkfulbnb - Vacation rental pool"
-                />
-
-                <img
-                    src="images/vacation-rental-inside-stone.png"
-                    alt="Thinkfulbnb - Vacation rental inside stone"
-                />
-
-                <p>
-                    Fusce porta odio nunc, eget pretium massa rutrum sit amet.
-                    Etiam fringilla aliquam dapibus. Maecenas quis nisi sed
-                    turpis aliquam porttitor eget ut quam. Sed vel scelerisque
-                    ex. Duis in pharetra neque, at tempus lorem. Aenean mi
-                    magna, posuere at quam sed, euismod gravida neque.
-                </p>
+                    <div class="item-double">
+                        <p>
+                            Fusce porta odio nunc, eget pretium massa rutrum sit
+                            amet. Etiam fringilla aliquam dapibus. Maecenas quis
+                            nisi sed turpis aliquam porttitor eget ut quam. Sed
+                            vel scelerisque ex. Duis in pharetra neque, at
+                            tempus lorem. Aenean mi magna, posuere at quam sed,
+                            euismod gravida neque.
+                        </p>
+                    </div>
+                </div>
             </section>
 
             <!-- Ideas -->
