--- a/index.html
+++ b/index.html
@@ -114,25 +114,33 @@
             <!-- Ideas -->
             <section id="ideas">
                 <h2>Ideas</h2>
-                <h3>Forest retreats</h3>
-                <img
-                    src="images/forest-retreat.png"
-                    alt="Thinkfulbnb - Forest retreat"
-                />
-                <h3>Beaches</h3>
-                <img
-                    src="images/beach-house.png"
-                    alt="Thinkfulbnb - Beach house"
-                />
-
-                <h3>Rustic cabins</h3>
-                <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-                <h3>Pet-friendly</h3>
-                <img
-                    src="images/pet-friendly.png"
-                    alt="Thinkfulbnb - Pet-friendly"
-                />
+                <div class="group">
+                    <div class="item">
+                        <h3>Forest retreats</h3>
+                        <img
+                            src="images/forest-retreat.png"
+                            alt="Thinkfulbnb - Forest retreat"
+                        />
+                    </div>
+                    <div class="item">
+                        <h3>Beaches</h3>
+                        <img
+                            src="images/beach-house.png"
+                            alt="Thinkfulbnb - Beach house"
+                        />
+                    </div>
+                    <div class="item">
+                        <h3>Rustic cabins</h3>
+                        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+                    </div>
+                    <div class="item">
+                        <h3>Pet-friendly</h3>
+                        <img
+                            src="images/pet-friendly.png"
+                            alt="Thinkfulbnb - Pet-friendly"
+                        />
+                    </div>
+                </div>
             </section>
 
             <!-- Host -->
