--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
             <!-- Host -->
             <section id="host" class="alternate-background">
                 <h2>Want to Become a Thinkfulbnb Host?</h2>
+                <div class="group">
+                  <div class="item"
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Phasellus molestie in est id efficitur. Sed hendrerit ut
@@ -170,11 +172,14 @@
                         et. Fusce eget hendrerit mauris.
                     </li>
                 </ul>
-
+                </div>
+                <div class="item">
                 <img
                     src="images/become-a-host.png"
                     alt="Thinkfulbnb - Become a host"
                 />
+                </div>
+              </div>
             </section>
         </main>
 
