added desktop css styling

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                                 <option value="yurt">Yurt</option>
                             </select>
                         </div>
+                        <div class="item">
                         <button type="submit">Search</button>
                     </div>
+                  </div>
                 </form>
             </section>
 
