--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
             <!-- Ideas -->
             <section id="ideas">
                 <h2>Ideas</h2>
-                <div class="group">
-                    <div class="item">
+                <div class="group row">
+                    <div class="column">
+                        <div class="item">
                         <h3>Forest retreats</h3>
                         <img
                             src="images/forest-retreat.png"
@@ -131,7 +132,10 @@
                             alt="Thinkfulbnb - Beach house"
                         />
                     </div>
-                    <div class="item">
+                    </div>
+                    
+                    <div class="column">
+                         <div class="item">
                         <h3>Rustic cabins</h3>
                         <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
                     </div>
@@ -141,6 +145,7 @@
                             src="images/pet-friendly.png"
                             alt="Thinkfulbnb - Pet-friendly"
                         />
+                    </div>
                     </div>
                 </div>
             </section>
